# ADEPT

./: .gitignore  README.md  project.yml  pyproject.toml  requirements.txt  setup.py
adept/: cli.py  config.py  fields.py  pipeline.py  postprocess.py  preprocess.py  traits.py  visualise.py  worldflora.py
adept/bhl/: classifier.py  descriptions.py  model.py  ocr_archive.py  postprocess.py  preprocess.py  tokenizer.py
adept/components/: anatomical.py  measurement.py  numeric.py  registry.py  traits.py
adept/tasks/: aggregate.py  base.py  descriptions.py  pipeline.py  run.py  traits.py
adept/utils/: aggregator.py  request.py
configs/: adept.cfg  base_config copy.cfg  base_config.cfg  base_trf_config.cfg  config.cfg  config1.cfg  trf_config.cfg
data/assets/: Untitled.ipynb  anatomical-parts.yml  anatomy-pattterns.jsonl  dimension-patterns.jsonl  fields.tpl.yml  species-example.csv  trait-patterns.jsonl  traits.parquet
data/corpus/: train_numeric.spacy  val_numeric.spacy
data/input/: north-american-taxonomy.csv
data/processed/: anatomy.jsonl  north-american-taxonomy.traits.xlsx  species-example.traits.xlsx  traits.xlsx
data/raw/: fields.tpl.yml  functional_traits.db  train_numeric.json
notebooks/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  nlp.ipynb  pipeline.ipynb  registry.ipynb  train-numeric-dataset.ipynb
scripts/: components.py
src/adept/: config.py  fields.py  pipeline.py  postprocess.py  (+3 more)
test/: fields_test.py  measurements_test.py  pipeline_test.py  postprocess_test.py  traits_test.py
(+105 files in other folders)
